--- a/styel.css
+++ b/styel.css
@@ -1,3 +1,22 @@
+@font-face {
+  font-family: font-one;
+  src: url(./font/vazir-font-v16.1.0/Vazir-Light.woff2) format("woff2");
+  font-weight: normal;
+  font-style: normal;
+
+}
+@font-face {
+  font-family: font-two;
+  src: url(./font/nahid/Nahid.woff2) format("woff2");
+  font-weight: normal;
+  font-style: normal;
+
+}
+body{
+
+  font-family: font-one;
+}
+
 .icon-sa{
     font-size: 60px;
     color: #187c48;
