add font all project

--- a/styel.css
+++ b/styel.css
@@ -56,13 +56,16 @@
   font-style: normal;
 }
 
-
+@font-face {
+  font-family: font-san;
+  src: url();
+}
 
 
 
 body{
 
-  font-family: font-four;
+  font-family: sans-serif;
 }
 
 .icon-sa{
