--- a/styel.css
+++ b/styel.css
@@ -1,3 +1,5 @@
+/* font */
+
 @font-face {
   font-family: font-vazir;
   src: url(./font/font/vazir-font-v16.1.0/Vazir-Bold.woff2) format("woff2");
@@ -88,44 +90,33 @@ body{
 
 /* تغییر رنگ دکمه آکاردئون */
 .accordion-button {
-    background-color: white; /* تغییر رنگ زمینه به سفید */
-    color: black; /* تغییر رنگ متن به سیاه (یا هر رنگ دیگری که می‌خواهید) */
+    background-color: white; 
+    color: black;  */
   }
   
   /* تغییر رنگ دکمه آکاردئون وقتی باز است */
   .accordion-button:not(.collapsed) {
-    background-color: white; /* تغییر رنگ زمینه به سفید */
-    color: black; /* تغییر رنگ متن به سیاه */
+    background-color: white; 
+    color: black;  
   }
   
-  /* تغییر رنگ دکمه آکاردئون هنگام hover (اختیاری) */
+  /* تغییر رنگ دکمه آکاردئون هنگام hover */
   .accordion-button:hover {
-    background-color: #f8f9fa; /* تغییر رنگ زمینه هنگام hover */
+    background-color: #f8f9fa; 
   }
 
 
 
-   /* تغییر رنگ دکمه آکاردئون */
-   /* .accordion-button {
-    background-color: rgb(61, 67, 255);
-    color: black;
-  } */
-
-  /* تغییر رنگ دکمه آکاردئون وقتی باز است */
-  /* .accordion-button:not(.collapsed) {
-    background-color: rgb(86, 255, 52);
-    color: black;
-  } */
-
+ 
   /* تغییر رنگ کل آکاردئون وقتی فعال است */
   .accordion-item.active {
-    background-color: #ff4d4d; /* خاکستری کم‌رنگ */
+    background-color: #ff4d4d; 
   }
 
 
   .accordion-button:focus {
-    outline: none; /* حذف outline */
-    box-shadow: none; /* حذف سایه (اختیاری) */
+    outline: none; 
+    box-shadow: none; 
     
   }
 
@@ -160,9 +151,8 @@ body{
 
 .foot-icon:hover{
 border-radius: 100%;
-  background-color: #265841;
+background-color: #265841;
   
-  transform: ;
 }
 
 
@@ -182,3 +172,6 @@ border-radius: 100%;
 .btn-moshaver-hover{
   color: #f8f9fa;
 }
+
+
+
